--- a/package.json
+++ b/package.json
@@ -21,19 +21,16 @@
     "@0x/subproviders": "^6.6.2",
     "@metamask/eth-sig-util": "^4.0.0",
     "@openzeppelin/contracts": "4.4.0",
+    "dotenv": "^16.0.2",
     "eth-gas-reporter": "^0.2.17",
     "ethereum-waffle": "^3.0.0",
-    "opensea-js": "^2.0.1",
+    "opensea-js": "^4.0.12",
     "truffle": "^5.1.30",
     "truffle-assertions": "^0.9.2",
     "truffle-contract-size": "^2.0.1",
     "truffle-flattener": "^1.4.2",
     "truffle-hdwallet-provider": "1.0.17",
     "web3": "^1.0.0-beta.34"
-  },
-  "engines": {
-    "node": "^12",
-    "yarn": "~1.22.4"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
